[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Mattias Buelens <mattias@buelens.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
primal = "0.3.0"
modinverse = "0.1.1"
